2022-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Add 'void' for proper prototypes pleasing clang-15

2022-03-29  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.2.5

2022-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Switch to including RcppBDT.h to ensure
	consistent compilation settings across compilation units

2022-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Correct signature of one declaration
	* src/Makevars: Minor cleanup
	* src/Makevars.win: Idem

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-08-15  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.2.4

	* DESCRIPTION: Removed two dated versioned Depends

	* src/toPOSIXct.cpp: Now uses Rcpp::Datetime and optional format
	instead of strptime which is not always available; disambiguated one
	assignment to please clang; removed explicit cross reference to
	anytime package
	* src/init.c (CallEntries): Updated for new format argument

	* man/toPOSIXct.Rd: Removed explicit cross-references and updated
	documentation
	* man/charToPOSIXct.Rd: Idem

	* README.md: Updated URLs for Boost
	* man/*: Idem

2021-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugRreports): Added to DESCRIPTION file

2021-01-02  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated, added some badges

	* .travis.yml: Update to 'bionic' and R 4.0.*

2019-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll version number and date

	* src/Makevars (PKG_CPPFLAGS): Add -DBOOST_NO_AUTO_PTR for quieter build

	* src/init.c: Added, based on pnrrs.r plus post-processing for Modules
	* R/RcppExports.R: Regenerated
	* src/RcppExports.cpp: Idem
