@@ -2,6 +2,8 @@
 
 	* src/init.c: Add 'void' for proper prototypes pleasing clang-15
 
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
+
 2022-03-29  Dirk Eddelbuettel  <edd@debian.org>
 
  	* DESCRIPTION (Version, Date): Release 0.2.5
